IDE-834 populate SourcePrefPage's framesize AUTO with value of first stream if it exists